[gd_scene load_steps=3 format=3 uid="uid://c3i0jiou7qr5m"]

[ext_resource type="PackedScene" uid="uid://cq87lj6f3n5mh" path="res://objects/entity_objects/DE_UI_Elements/available_trigger_connections/AvailableTriggerConnections.tscn" id="1_au83h"]
[ext_resource type="Script" path="res://objects/entity_objects/crawl_timer_logic_3d/DE_timer_logic_editor/DE_TimerLogicEditor.gd" id="1_w6ihy"]

[node name="DE_TimerLogicEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w6ihy")

[node name="TimerInterval" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="TimerInterval"]
layout_mode = 2
text = "Timer Interval (sec): "

[node name="LineEdit_TimerInterval" type="LineEdit" parent="TimerInterval"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label_Connection" type="Label" parent="."]
layout_mode = 2
text = "Input Connection:"

[node name="AvailableTriggerConnections" parent="." instance=ExtResource("1_au83h")]
layout_mode = 2
size_flags_vertical = 3
max_connections = 1

[connection signal="text_submitted" from="TimerInterval/LineEdit_TimerInterval" to="." method="_on_line_edit_timer_interval_text_submitted"]
